...
    }
    // MARK: - Private Properties
    
    private let loginWebView: WKWebView = {
        let webView = WKWebView()
        webView.backgroundColor = .white
        webView.accessibilityIdentifier = "UnsplashWebView"
        return webView
    }()
    
    private let backBatton: UIButton = {
        let button = UIButton(type: .custom)
        let logoutImage =  UIImage(named: "backButton")
        button.setImage(logoutImage, for: button.state)
        button.addTarget(
            nil,
            action: #selector(Self.didTapButton),
            for: .touchUpInside
        )
...
