...
        button.setTitle("Войти", for: button.state)
        button.titleLabel?.font = UIFont.systemFont(ofSize: 17.0, weight: .bold)
        button.setTitleColor(.backGroundFigma, for: button.state)
        button.backgroundColor = .white
        button.layer.cornerRadius = 16
        button.layer.masksToBounds = true
        button.accessibilityIdentifier = "Authenticate"
        
        return button
    }()
    
    private let tokenStorage = OAuth2TokenStorage()
    weak var delegate: AuthViewControllerDelegate?
...
